[field, form-builder] fix overflow issues (#2079)
* [field] fix fields in fieldsets overflowing container width

* [field] fix text in diff component overflowing its container

* [form-builder] fix long title in array item overflow from overflow: hidden to min-width

--- a/packages/@sanity/form-builder/src/inputs/ArrayInput/ArrayInput.css
+++ b/packages/@sanity/form-builder/src/inputs/ArrayInput/ArrayInput.css
@@ -6,7 +6,7 @@
 }
 
 .inner {
-  overflow: hidden;
+  min-width: 0;
 }
 
 .list {
