--- a/packages/@sanity/field/src/diff/components/DiffFromTo.css
+++ b/packages/@sanity/field/src/diff/components/DiffFromTo.css
@@ -2,4 +2,5 @@
   flex: 1;
   min-width: 0;
   display: block;
+  white-space: break-spaces;
 }
